[gd_scene load_steps=27 format=2]

[ext_resource path="res://sprites/lobby_weapon_0.png" type="Texture" id=1]
[ext_resource path="res://misc/template_tileset.tres" type="TileSet" id=2]
[ext_resource path="res://sprites/lobby_panel.png" type="Texture" id=3]
[ext_resource path="res://scripts/scene_lobby.gd" type="Script" id=4]
[ext_resource path="res://misc/tile_shader.tres" type="Shader" id=5]
[ext_resource path="res://sprites/crosshair.png" type="Texture" id=6]
[ext_resource path="res://misc/Shortstack .ttf" type="DynamicFontData" id=7]
[ext_resource path="res://objects/IngameWorker.tscn" type="PackedScene" id=8]
[ext_resource path="res://sprites/lobby_mod_0.png" type="Texture" id=9]
[ext_resource path="res://sprites/lobby_stage_1.png" type="Texture" id=10]
[ext_resource path="res://sprites/lobby_color.png" type="Texture" id=11]
[ext_resource path="res://misc/DEFAULT FONT.tres" type="DynamicFont" id=12]
[ext_resource path="res://sprites/lobby_color_disabled.png" type="Texture" id=13]
[ext_resource path="res://misc/DEFAULT_THEME.tres" type="Theme" id=14]
[ext_resource path="res://misc/player_shader.tres" type="Shader" id=15]
[ext_resource path="res://sprites/lobby_panel_arrow.png" type="Texture" id=16]
[ext_resource path="res://sprites/lobby_header.png" type="Texture" id=17]
[ext_resource path="res://music/server_lobby_playtest.wav" type="AudioStream" id=18]
[ext_resource path="res://music/server_lobby_panel.wav" type="AudioStream" id=19]
[ext_resource path="res://objects/VP.tscn" type="PackedScene" id=20]

[sub_resource type="ShaderMaterial" id=1]
shader = ExtResource( 5 )
shader_param/MOOD_COLOR = Plane( 0, 0, 0, 1 )

[sub_resource type="DynamicFont" id=2]
size = 40
extra_spacing_top = -10
extra_spacing_bottom = 2
extra_spacing_space = 10
font_data = ExtResource( 7 )

[sub_resource type="StyleBoxTexture" id=3]
texture = ExtResource( 11 )
region_rect = Rect2( 0, 0, 60, 60 )

[sub_resource type="StyleBoxTexture" id=4]
texture = ExtResource( 13 )
region_rect = Rect2( 0, 0, 60, 60 )

[sub_resource type="ShaderMaterial" id=5]
shader = ExtResource( 15 )
shader_param/PLAYER_COLOR = null
shader_param/MOOD_COLOR = null

[sub_resource type="ShaderMaterial" id=6]
shader = ExtResource( 15 )
shader_param/PLAYER_COLOR = null
shader_param/MOOD_COLOR = null

[node name="Node2D" type="Node2D"]
material = SubResource( 1 )
script = ExtResource( 4 )

[node name="IngameWorker" parent="." instance=ExtResource( 8 )]
loopWidth = 1840
player_lives = -1

[node name="BACKHUD" type="Node2D" parent="." groups=["HUD"]]
position = Vector2( 720, 720 )

[node name="Background" type="ColorRect" parent="BACKHUD"]
show_behind_parent = true
margin_left = -720.0
margin_top = -720.0
margin_right = 560.0
rect_pivot_offset = Vector2( 615, 275 )
color = Color( 0, 0, 0, 1 )

[node name="PanelMusic" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 19 )
autoplay = true
bus = "Music"

[node name="PlaytestMusic" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 18 )
volume_db = -80.0
autoplay = true
bus = "Music"

[node name="TileMap" type="TileMap" parent="."]
use_parent_material = true
tile_set = ExtResource( 2 )
cell_size = Vector2( 80, 80 )
format = 1
tile_data = PoolIntArray( 196608, 11, 0, 196609, 11, 0, 196610, 11, 0, 196611, 11, 0, 196612, 11, 0, 196613, 11, 0, 196614, 11, 0, 196615, 11, 0, 196616, 11, 0, 196617, 11, 0, 196618, 11, 0, 196619, 11, 0, 196620, 11, 0, 196621, 11, 0, 196622, 11, 0, 196623, 11, 0, 196624, 11, 0, 196625, 11, 0, 196626, 11, 0, 196627, 11, 0, 196628, 11, 0, 196629, 11, 0, 196630, 11, 0, 524291, 13, 0, 524292, 13, 0, 524293, 13, 0, 524294, 13, 0, 524304, 13, 0, 524305, 13, 0, 524306, 13, 0, 524307, 13, 0, 720896, 1, 0, 720897, 1, 0, 720898, 1, 0, 720899, 1, 0, 720900, 1, 0, 720901, 1, 0, 720902, 1, 0, 720903, 1, 0, 720904, 1, 0, 720905, 1, 0, 720906, 1, 0, 720907, 1, 0, 720908, 1, 0, 720909, 1, 0, 720910, 1, 0, 720911, 1, 0, 720912, 1, 0, 720913, 1, 0, 720914, 1, 0, 720915, 1, 0, 720916, 1, 0, 720917, 1, 0, 720918, 1, 0 )

[node name="SPAWNPOINTS" type="Node2D" parent="."]

[node name="Spawn" type="Position2D" parent="SPAWNPOINTS"]
position = Vector2( 400, 640 )
__meta__ = {
"_gizmo_extents_": 86.5
}

[node name="Spawn2" type="Position2D" parent="SPAWNPOINTS"]
position = Vector2( 1435, 640 )
__meta__ = {
"_gizmo_extents_": 86.5
}

[node name="VP" parent="." instance=ExtResource( 20 )]

[node name="FRONTHUD" type="Node2D" parent="." groups=["HUD"]]
use_parent_material = true
position = Vector2( 560, 720 )

[node name="Header" type="Sprite" parent="FRONTHUD"]
use_parent_material = true
position = Vector2( -720, -720 )
texture = ExtResource( 17 )
centered = false

[node name="Fade" type="ColorRect" parent="FRONTHUD"]
margin_left = -720.0
margin_top = -720.0
margin_right = 560.0
rect_pivot_offset = Vector2( 615, 275 )
color = Color( 0, 0, 0, 0.54902 )

[node name="Title" type="Label" parent="FRONTHUD"]
margin_left = -720.0
margin_top = -700.0
margin_right = 560.0
margin_bottom = -663.0
custom_fonts/font = SubResource( 2 )
text = "Room Title"
align = 1

[node name="Panel" type="Node2D" parent="FRONTHUD"]
use_parent_material = true

[node name="Back" type="Sprite" parent="FRONTHUD/Panel"]
use_parent_material = true
position = Vector2( -720, -720 )
texture = ExtResource( 3 )
centered = false

[node name="PanelArrow" type="Button" parent="FRONTHUD/Panel"]
margin_left = -425.0
margin_top = -725.0
margin_right = -360.0
margin_bottom = -639.0
rect_scale = Vector2( -1, 1 )
theme = ExtResource( 14 )
custom_colors/font_color = Color( 1, 1, 1, 1 )
custom_fonts/font = ExtResource( 12 )
icon = ExtResource( 16 )
align = 0
icon_align = 1

[node name="StageSelect" type="Button" parent="FRONTHUD/Panel"]
margin_left = -680.0
margin_top = -640.0
margin_right = -510.0
margin_bottom = -550.0
theme = ExtResource( 14 )
custom_colors/font_color = Color( 1, 1, 1, 1 )
custom_fonts/font = ExtResource( 12 )
icon = ExtResource( 10 )

[node name="ColorSelect" type="Control" parent="FRONTHUD/Panel"]
margin_left = -695.0
margin_top = -520.0
margin_right = -655.0
margin_bottom = -480.0

[node name="ColorOption" type="Button" parent="FRONTHUD/Panel/ColorSelect"]
margin_right = 60.0
margin_bottom = 60.0
theme = ExtResource( 14 )
custom_colors/font_color = Color( 1, 1, 1, 1 )
custom_fonts/font = ExtResource( 12 )
custom_styles/hover = SubResource( 3 )
custom_styles/pressed = SubResource( 3 )
custom_styles/focus = SubResource( 3 )
custom_styles/disabled = SubResource( 4 )
custom_styles/normal = SubResource( 3 )

[node name="ColorOption2" type="Button" parent="FRONTHUD/Panel/ColorSelect"]
margin_left = 65.0
margin_right = 125.0
margin_bottom = 60.0
theme = ExtResource( 14 )
custom_colors/font_color = Color( 1, 1, 1, 1 )
custom_fonts/font = ExtResource( 12 )
custom_styles/hover = SubResource( 3 )
custom_styles/pressed = SubResource( 3 )
custom_styles/focus = SubResource( 3 )
custom_styles/disabled = SubResource( 4 )
custom_styles/normal = SubResource( 3 )

[node name="ColorOption3" type="Button" parent="FRONTHUD/Panel/ColorSelect"]
margin_left = 130.0
margin_right = 190.0
margin_bottom = 60.0
theme = ExtResource( 14 )
custom_colors/font_color = Color( 1, 1, 1, 1 )
custom_fonts/font = ExtResource( 12 )
custom_styles/hover = SubResource( 3 )
custom_styles/pressed = SubResource( 3 )
custom_styles/focus = SubResource( 3 )
custom_styles/disabled = SubResource( 4 )
custom_styles/normal = SubResource( 3 )

[node name="ColorOption4" type="Button" parent="FRONTHUD/Panel/ColorSelect"]
margin_top = 65.0
margin_right = 60.0
margin_bottom = 125.0
theme = ExtResource( 14 )
custom_colors/font_color = Color( 1, 1, 1, 1 )
custom_fonts/font = ExtResource( 12 )
custom_styles/hover = SubResource( 3 )
custom_styles/pressed = SubResource( 3 )
custom_styles/focus = SubResource( 3 )
custom_styles/disabled = SubResource( 4 )
custom_styles/normal = SubResource( 3 )

[node name="ColorOption5" type="Button" parent="FRONTHUD/Panel/ColorSelect"]
margin_left = 65.0
margin_top = 65.0
margin_right = 125.0
margin_bottom = 125.0
theme = ExtResource( 14 )
custom_colors/font_color = Color( 1, 1, 1, 1 )
custom_fonts/font = ExtResource( 12 )
custom_styles/hover = SubResource( 3 )
custom_styles/pressed = SubResource( 3 )
custom_styles/focus = SubResource( 3 )
custom_styles/disabled = SubResource( 4 )
custom_styles/normal = SubResource( 3 )

[node name="ColorOption6" type="Button" parent="FRONTHUD/Panel/ColorSelect"]
margin_left = 130.0
margin_top = 65.0
margin_right = 190.0
margin_bottom = 125.0
theme = ExtResource( 14 )
custom_colors/font_color = Color( 1, 1, 1, 1 )
custom_fonts/font = ExtResource( 12 )
custom_styles/hover = SubResource( 3 )
custom_styles/pressed = SubResource( 3 )
custom_styles/focus = SubResource( 3 )
custom_styles/disabled = SubResource( 4 )
custom_styles/normal = SubResource( 3 )

[node name="ColorOption7" type="Button" parent="FRONTHUD/Panel/ColorSelect"]
margin_top = 130.0
margin_right = 60.0
margin_bottom = 190.0
theme = ExtResource( 14 )
custom_colors/font_color = Color( 1, 1, 1, 1 )
custom_fonts/font = ExtResource( 12 )
custom_styles/hover = SubResource( 3 )
custom_styles/pressed = SubResource( 3 )
custom_styles/focus = SubResource( 3 )
custom_styles/disabled = SubResource( 4 )
custom_styles/normal = SubResource( 3 )

[node name="ColorOption8" type="Button" parent="FRONTHUD/Panel/ColorSelect"]
margin_left = 65.0
margin_top = 130.0
margin_right = 125.0
margin_bottom = 190.0
theme = ExtResource( 14 )
custom_colors/font_color = Color( 1, 1, 1, 1 )
custom_fonts/font = ExtResource( 12 )
custom_styles/hover = SubResource( 3 )
custom_styles/pressed = SubResource( 3 )
custom_styles/focus = SubResource( 3 )
custom_styles/disabled = SubResource( 4 )
custom_styles/normal = SubResource( 3 )

[node name="ColorOption9" type="Button" parent="FRONTHUD/Panel/ColorSelect"]
margin_left = 130.0
margin_top = 130.0
margin_right = 190.0
margin_bottom = 190.0
theme = ExtResource( 14 )
custom_colors/font_color = Color( 1, 1, 1, 1 )
custom_fonts/font = ExtResource( 12 )
custom_styles/hover = SubResource( 3 )
custom_styles/pressed = SubResource( 3 )
custom_styles/focus = SubResource( 3 )
custom_styles/disabled = SubResource( 4 )
custom_styles/normal = SubResource( 3 )

[node name="ColorOption10" type="Button" parent="FRONTHUD/Panel/ColorSelect"]
margin_top = 195.0
margin_right = 60.0
margin_bottom = 255.0
theme = ExtResource( 14 )
custom_colors/font_color = Color( 1, 1, 1, 1 )
custom_fonts/font = ExtResource( 12 )
custom_styles/hover = SubResource( 3 )
custom_styles/pressed = SubResource( 3 )
custom_styles/focus = SubResource( 3 )
custom_styles/disabled = SubResource( 4 )
custom_styles/normal = SubResource( 3 )

[node name="ColorOption11" type="Button" parent="FRONTHUD/Panel/ColorSelect"]
margin_left = 65.0
margin_top = 195.0
margin_right = 125.0
margin_bottom = 255.0
theme = ExtResource( 14 )
custom_colors/font_color = Color( 1, 1, 1, 1 )
custom_fonts/font = ExtResource( 12 )
custom_styles/hover = SubResource( 3 )
custom_styles/pressed = SubResource( 3 )
custom_styles/focus = SubResource( 3 )
custom_styles/disabled = SubResource( 4 )
custom_styles/normal = SubResource( 3 )

[node name="ColorOption12" type="Button" parent="FRONTHUD/Panel/ColorSelect"]
margin_left = 130.0
margin_top = 195.0
margin_right = 190.0
margin_bottom = 255.0
theme = ExtResource( 14 )
custom_colors/font_color = Color( 1, 1, 1, 1 )
custom_fonts/font = ExtResource( 12 )
custom_styles/hover = SubResource( 3 )
custom_styles/pressed = SubResource( 3 )
custom_styles/focus = SubResource( 3 )
custom_styles/disabled = SubResource( 4 )
custom_styles/normal = SubResource( 3 )

[node name="ColorOption13" type="Button" parent="FRONTHUD/Panel/ColorSelect"]
margin_left = 30.0
margin_top = 260.0
margin_right = 90.0
margin_bottom = 320.0
theme = ExtResource( 14 )
custom_colors/font_color = Color( 1, 1, 1, 1 )
custom_fonts/font = ExtResource( 12 )
custom_styles/hover = SubResource( 3 )
custom_styles/pressed = SubResource( 3 )
custom_styles/focus = SubResource( 3 )
custom_styles/disabled = SubResource( 4 )
custom_styles/normal = SubResource( 3 )

[node name="ColorOption14" type="Button" parent="FRONTHUD/Panel/ColorSelect"]
margin_left = 100.0
margin_top = 260.0
margin_right = 160.0
margin_bottom = 320.0
theme = ExtResource( 14 )
custom_colors/font_color = Color( 1, 1, 1, 1 )
custom_fonts/font = ExtResource( 12 )
custom_styles/hover = SubResource( 3 )
custom_styles/pressed = SubResource( 3 )
custom_styles/focus = SubResource( 3 )
custom_styles/disabled = SubResource( 4 )
custom_styles/normal = SubResource( 3 )

[node name="WeaponSelect" type="Button" parent="FRONTHUD/Panel"]
material = SubResource( 5 )
margin_left = -695.0
margin_top = -170.0
margin_right = -605.0
margin_bottom = -80.0
theme = ExtResource( 14 )
custom_colors/font_color = Color( 1, 1, 1, 1 )
custom_fonts/font = ExtResource( 12 )
icon = ExtResource( 1 )

[node name="ModSelect" type="Button" parent="FRONTHUD/Panel"]
material = SubResource( 6 )
margin_left = -595.0
margin_top = -170.0
margin_right = -505.0
margin_bottom = -80.0
theme = ExtResource( 14 )
custom_colors/font_color = Color( 1, 1, 1, 1 )
custom_fonts/font = ExtResource( 12 )
icon = ExtResource( 9 )

[node name="Crosshair" type="Sprite" parent="."]
texture = ExtResource( 6 )
